# Misc

./: .gitignore  README.md  SimpleIO.js  app.js  asyncIO.js  bitcoinprice.js  fibo.py  fileIOtest.py  flightaware.js  hackerNewsScrapeServer.js  hash_and_funcs.clj  package.json  practicePythonGraphing.py  practiceServer.js  readData.js  sampleNumbers.txt  scrape.js  wordAppearance.js
3JS/: first.html  index.html  second.html
Angular_Test_Cases/: package.json
C/: conditionals.c  doge_grammar.c  helloworld.c  prompt.c
CPP/: projectEuler3.cpp  projectEuler5.cpp
Clojure/: 4clojure_easy.clj
GNURadio/: HackRF_Example1_ReceiveFM.grc  hackrf_example1.py
Haskell/: CS194L1.hs  README.md  baby.hs
Haskell/firstScottyProject/: Main.hs  todo.cabal
Js_Node/: SimpleIO.js  apiCallthenPost.js  es6Functions.js  es6Templating.js  node-postgress-example.js  practiceServer.js  readData.js  scrape.js  utilImport.js  utils.js  wordAppearance.js
Misc/: apiCallthenPost.js  hackerNewsScrapeServer.js
MySite/: app.js  helper.js
ProjectEuler/: problem4.txt  problem7.txt  projectEuler2.cpp  projectEuler3.cpp  projectEuler4.hs  projectEuler6.cpp  projectEuler7.cpp  projectEuler7.hs  projectEuler8.hs  txt.txt
Python/: ClassicPapersInProgrammingLanguagesandLogic.py  anonymity.py  download.py  fileIOtest.py  fizzbuzz.py  lev.py  moveFromCurrentDirectory.py  pythonToBashLs.py  pythonToBashSpace.py  request_example.py  scrapePaLinks.py  sequenceOfBash.py  simplePortScan.py
ReactJS/: index.sample.html
Sample_Mocha/: package.json
Scala/: example1.scala  example2.scala  file.txt  (+2 more)
(+101 files in other folders)
